[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/ingame/stage/computador/tela-computador.gd" type="Script" id=1]

[node name="tela-computador" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 184.0
margin_bottom = 120.0

[node name="game1" type="Button" parent="Panel"]
margin_left = 64.0
margin_top = 16.0
margin_right = 128.0
margin_bottom = 36.0
text = "GAME1"

[node name="game2" type="Button" parent="Panel"]
margin_left = 64.0
margin_top = 40.0
margin_right = 128.0
margin_bottom = 60.0
text = "GAME2"

[node name="game3" type="Button" parent="Panel"]
margin_left = 64.0
margin_top = 64.0
margin_right = 128.0
margin_bottom = 84.0
text = "GAME3"

[node name="game4" type="Button" parent="Panel"]
margin_left = 64.0
margin_top = 88.0
margin_right = 128.0
margin_bottom = 108.0
text = "GAME 4"

[connection signal="pressed" from="Panel/game1" to="." method="_on_game1_pressed"]
[connection signal="pressed" from="Panel/game2" to="." method="_on_game2_pressed"]
[connection signal="pressed" from="Panel/game3" to="." method="_on_game3_pressed"]
[connection signal="pressed" from="Panel/game4" to="." method="_on_game4_pressed"]
